--- a/src/main/webapp/WEB-INF/Home.html
+++ b/src/main/webapp/WEB-INF/Home.html
@@ -7,15 +7,20 @@
 	<body>
 		<h1>Welcome to the homepage!</h1>
 		<h3>All your categories:</h3>
-		<!--<p th:text="${categoriesError}"></p> -->
-		<div>
-			<div th:each="category : ${categoryList}" >
-					<span th:text="${category.categoryID}"></span>
-					 - 
-					 <span tx:text="${category.name}"></span>
-			</div>
+		<p th:text="${categoriesError}"></p>
+		<div th:each="string : ${stringList}" >
+				<span th:text="${string}">
+					There are no categories to show. Please create a new one with the form below!
+				</span>
 		</div>
-	
 		<h3>Insert a new category:</h3>
+		<form action="/GoToHome" method="POST">
+			Parent ID: 
+			<select required>
+			<option th:each="id : ${idList}" th:value="${id}" th:text="${id}"></option>
+			</select><br>
+			Category name: <input type="text" required><br>
+			<input type="submit" name="Create category">
+		</form>
 	</body>
 </html>
