--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -9,15 +9,19 @@
 		<p><a th:href="@{/Logout}">Log out</a> from your profile.</p>
 		<h3>All your categories:</h3>
 		<p th:text="${categoriesError}"></p>
+		<a href="Home.html" th:if="${not copyLink}"
+			th:href="@{/InsertCopiedCategory(parentID=${parentID}, rootID='root')}">
+			copy here
+		</a>
 		<div th:each="category : ${categoryList}">
 			<span th:text="${category.categoryID + ' - ' + category.name + ' - '}">XXX - Generic category - </span>
 			<a href="Home.html" th:if="${copyLink}"
 				th:href="@{/CopyCategory(parentID=${category.categoryID})}">
 				copy
 			</a>
-			<a href="Home.html" th:if="${not copyLink}"
-				th:href="@{/GoToHome}"
-				th:text="${#lists.contains(toCopyList, category)} ? '' : 'copy here'">
+			<a href="Home.html" th:if="${not copyLink and not isToCopyMap[category.categoryID]}"
+				th:href="@{/InsertCopiedCategory(parentID=${parentID}, rootID=${category.categoryID})}">
+				copy here
 			</a>
 		</div>
 		<p th:if="${#lists.isEmpty(categoryList)}">
