--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,17 +3,20 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Login page</title>
+		<link rel="stylesheet" type="text/css" media="all"
+			href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 	</head>
 	<body>
 		<h1>Please, login to access the Homepage!</h1>
-		<p th:text="${loginError}"></p>
+		<p class="redtext" th:text="${loginError}"></p>
 		<form action="CheckLogin" method="POST">
 			username: <input type="text" name="username" required><br>
 			password: <input type="password" name="password" required><br>
 			<input type="submit" value="login">
 		</form>
 		<h2>You are not registered? Register here:</h2>
-		<p th:text="${registrationError}"></p>
+		<p class="redtext" th:text="${registrationError}"></p>
+		<p class="greentext" th:text="${registrationSuccesful}"></p>
 		<form action="RegisterNewUser" method="POST">
 			username: <input type="text" name="username" required><br>
 			password: <input type="password" name="password" required><br>
