--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -11,20 +11,21 @@
 		<h3>All your categories:</h3>
 		<p class="redtext" th:text="${categoriesError}"></p>
 		<a href="Home.html" th:if="${not copyLink}"
-			th:href="@{/InsertCopiedCategory(parentID=${parentID}, rootID='root')}">
+			th:href="@{/InsertCopiedCategory(categoryID=${categoryID}, parentID='root')}">
 			copy here
 		</a>
 		<div th:each="category : ${categoryList}">
-			<span th:if="${copyLink or (not copyLink and not isToCopyMap[category.categoryID])}"
-			 	th:text="${category.categoryID + ' - ' + category.name + ' - '}">XXX - Generic category - </span>
-		 	<span class="redtext" th:if="${not copyLink and isToCopyMap[category.categoryID]}"
-		 		th:text="${category.categoryID + ' - ' + category.name}">XXX - Generic category - </span>
+		 	<span th:class="${copyLink or (not copyLink and not isToCopyMap[category.categoryID])} ? '' : 'redtext'"
+		 		th:text="${category.categoryID + ' - ' + category.name}">
+		 		XXX - Generic category
+		 	</span>
+		 	<span th:if="${copyLink or (not copyLink and not isToCopyMap[category.categoryID])}"> - </span>
 			<a href="Home.html" th:if="${copyLink}"
-				th:href="@{/CopyCategory(parentID=${category.categoryID})}">
+				th:href="@{/CopyCategory(categoryID=${category.categoryID})}">
 				copy
 			</a>
 			<a href="Home.html" th:if="${not copyLink and not isToCopyMap[category.categoryID]}"
-				th:href="@{/InsertCopiedCategory(parentID=${parentID}, rootID=${category.categoryID})}">
+				th:href="@{/InsertCopiedCategory(categoryID=${categoryID}, parentID=${category.categoryID})}">
 				copy here
 			</a>
 		</div>
