--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -15,10 +15,11 @@
 			copy here
 		</a>
 		<div th:each="category : ${categoryList}">
-		 	<span th:class="${copyLink or (not copyLink and not isToCopyMap[category.categoryID])} ? '' : 'redtext'"
-		 		th:text="${category.categoryID + ' - ' + category.name}">
+		 	<span th:class=" (${copyLink or (not copyLink and not isToCopyMap[category.categoryID])} ? '' : 'redtext') 
+		 					+ ' ' + (${category.categoryID >= 10} ? 'moveright' : '')"
+   				th:text="${category.categoryID + ' - ' + category.name}">
 		 		XXX - Generic category
-		 	</span>
+	 		</span>
 		 	<span th:if="${copyLink or (not copyLink and not isToCopyMap[category.categoryID])}"> - </span>
 			<a href="Home.html" th:if="${copyLink}"
 				th:href="@{/CopyCategory(categoryID=${category.categoryID})}">
