--- a/pure-html/src/main/webapp/index.html
+++ b/pure-html/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 			password: <input type="password" name="password" required><br>
 			<input type="submit" value="login">
 		</form>
-		<h2>You are not registered? Register here:</h2>
+		<h2>Are you not registered? Register here:</h2>
 		<p class="redtext" th:text="${registrationError}"></p>
 		<p class="greentext" th:text="${registrationSuccesful}"></p>
 		<form action="RegisterNewUser" method="POST">
