--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Login page</title>
-		<link rel="./resources/stylesheet" type="text/css" media="all"/>
+		<link rel="stylesheet" type="text/css" media="all" href="resources/mystyle.css" />
 		<script src="./resources/makeCall.js" charset="utf-8" defer></script>
-		<script src="./resources/login.js" charset="utf-8" defer></script>
+		<script src="./resources/loginPage.js" charset="utf-8" defer></script>
 	</head>
 	<body>
 		<h1>Please, login to access the Homepage!</h1>
@@ -16,12 +16,12 @@
 			<input id="loginButton" type="button" value="login">
 		</form>
 		<h2>Are you not registered? Register here:</h2>
-		<p class="redtext"></p>
-		<p class="greentext"></p>
+		<p id="registrationError" class="redtext"></p>
+		<p id="registrationSuccess" class="greentext"></p>
 		<form action="#">
 			username: <input type="text" name="username" required><br>
 			password: <input type="password" name="password" required><br>
-			<input type="button" value="register">
+			<input id="registrationButton" type="button" value="register">
 		</form>
 	</body>
 </html>
