--- a/pure-html/src/main/webapp/index.html
+++ b/pure-html/src/main/webapp/index.html
@@ -7,20 +7,29 @@
 			href="../CSS/mystyle.css" th:href="@{/css/mystyle.css}" />
 	</head>
 	<body>
-		<h1>Please, login to access the Homepage!</h1>
-		<p class="redtext" th:text="${loginError}"></p>
-		<form action="CheckLogin" method="POST">
-			username: <input type="text" name="username" required><br>
-			password: <input type="password" name="password" required><br>
-			<input type="submit" value="login">
-		</form>
-		<h2>Are you not registered? Register here:</h2>
-		<p class="redtext" th:text="${registrationError}"></p>
-		<p class="greentext" th:text="${registrationSuccesful}"></p>
-		<form action="RegisterNewUser" method="POST">
-			username: <input type="text" name="username" required><br>
-			password: <input type="password" name="password" required><br>
-			<input type="submit" value="register">
-		</form>
+		<header>
+			<h1>Classification of satellite images</h1>
+		</header>
+		<section>
+			<h2>Please, login to access the Homepage!</h2>
+			<p class="redtext" th:text="${loginError}"></p>
+			<form action="CheckLogin" method="POST">
+				username: <input type="text" name="username" required><br>
+				password: <input type="password" name="password" required><br>
+				<input type="submit" value="login">
+			</form>
+		</section>
+		<section>
+			<h2>Are you not registered? Register here:</h2>
+			<p th:class="${colorText}" th:text="${registrationMessage}"></p>
+			<form action="RegisterNewUser" method="POST">
+				username: <input type="text" name="username" required><br>
+				password: <input type="password" name="password" required><br>
+				<input type="submit" value="register">
+			</form>
+		</section>
+		<footer>
+			<p>Web Information Technologies project - developed by group 9 - De Ciechi Samuele - Deidier Simone</p>
+		</footer>
 	</body>
 </html>
