--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -16,7 +16,7 @@
 			<form action="#">
 				username: <input id="username" type="text" name="username" required><br>
 				password: <input id="password" type="password" name="password" required><br>
-				<input id="loginButton" type="button" value="login">
+				<input id="loginButton" type="submit" value="login">
 			</form>
 		</section>
 		<section>
@@ -24,7 +24,7 @@
 			<form action="#">
 				username: <input id="newUsername" type="text" name="username" required><br>
 				password: <input type="password" name="password" required><br>
-				<input id="registrationButton" type="button" value="register">
+				<input id="registrationButton" type="submit" value="register">
 			</form>
 		</section>
 		<footer>
