(now actually finished)

--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -13,7 +13,7 @@
 		</header>
 		<section>
 		<h2>Please, login to access the Homepage!</h2>
-			<form action="#">
+			<form id="formLogin">
 				username: <input id="username" type="text" name="username" required><br>
 				password: <input id="password" type="password" name="password" required><br>
 				<input id="loginButton" type="submit" value="login">
@@ -21,7 +21,7 @@
 		</section>
 		<section>
 			<h2>Are you not registered? Register here:</h2>
-			<form action="#">
+			<form id=formRegistration>
 				username: <input id="newUsername" type="text" name="username" required><br>
 				password: <input type="password" name="password" required><br>
 				<input id="registrationButton" type="submit" value="register">
