--- a/pure-html/src/main/webapp/Home.html
+++ b/pure-html/src/main/webapp/Home.html
@@ -45,7 +45,7 @@
 					<option th:each="id : ${idList}" th:value="${id}" th:text="${id}"></option>
 				</select><br>
 				Category name: <input type="text" name="name" required><br>
-				<input type="submit" name="Create category">
+				<input type="submit" value="Create category">
 			</form>
 		</section>
 		<footer>
