Fully functional drag&drop (I want then to modify a little the servlet but not important)

--- a/RIA/src/main/webapp/index.html
+++ b/RIA/src/main/webapp/index.html
@@ -7,7 +7,7 @@
 		<script src="./resources/makeCall.js" charset="utf-8" defer></script>
 		<script src="./resources/loginPage.js" charset="utf-8" defer></script>
 	</head>
-	<body>
+	<body class='center'>  <!--   REMOVE HERE FOR PAGE BACK TO THE LEFT -->
 		<header>
 			<h1>Classification of satellite images</h1>
 		</header>
