--- a/RIA/src/main/webapp/Home.html
+++ b/RIA/src/main/webapp/Home.html
@@ -18,7 +18,7 @@
 			</div>
 		</section>
 		<section>
-			<form id="createCategoryForm" class="box">
+			<form id="createCategoryForm" class="box morespaceup">
 				Parent ID: 
 				<select id="parentIDCreation" name="parentID" required>
 				</select><br>
